syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcEvent";

package EventApi;

service Event {
	rpc GetEventById (EventRequest) returns (EventResponse) {}
}

message EventRequest {
	string id = 1;
}

message Tag {
	string id = 1;
	string value = 2;
}

message EventResponse {
	string id = 1;
	string title = 2;
	string description = 3;
	string location = 4;
	google.protobuf.Timestamp startDate = 5;
	google.protobuf.Timestamp endDate = 6;
	string organiserId = 7;
	bytes image = 8;
	repeated Tag tags = 9;
}
